modify ''key'' in ''project'' -> assigne ID for project

--- a/src/assets/data/project.data.json
+++ b/src/assets/data/project.data.json
@@ -1,8 +1,16 @@
 [
   {
+    "id": 1,
     "picture": "css/img/project/",
-    "description": "Un projet",
-    "link": "http://amazon.com",
+    "description": "One project",
+    "link": "http://link.com",
     "desiableLink": false
+  },
+  {
+    "id": 2,
+    "picture": "css/img/project/",
+    "description": "An another project",
+    "link": "http://link.com",
+    "desiableLink": true
   }
 ]
